...
			android:layout_height="wrap_content"
			android:inputType="number"
			android:hint="CARD NUMBER"
			android:maxLength="16"
			android:background="@drawable/bg_edittext_focused_1"
			android:ems="10"
			android:id="@+id/cardno" android:layout_marginTop="116dp"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="68dp" android:layout_marginLeft="68dp"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:background="@drawable/bg_edittext_focused_1"
			android:hint="NAME"
			android:ems="10"
			android:id="@+id/cname"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"
			android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/cardno"
			app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginBottom="8dp"
			app:layout_constraintVertical_bias="0.343" android:layout_marginLeft="36dp"/>
	<EditText
			android:layout_width="45dp"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:hint="MM"
			android:maxLength="2"
			android:background="@drawable/bg_edittext_focused_1"
			android:ems="10"
			android:id="@+id/mm"
			app:layout_constraintStart_toEndOf="@+id/cname" android:layout_marginStart="32dp"
			app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginBottom="36dp"
			android:layout_marginLeft="32dp"/>
	<EditText
			android:layout_width="45dp"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:hint="YY"
			android:maxLength="2"
			android:background="@drawable/bg_edittext_focused_1"
			android:ems="10"
			android:id="@+id/yy" app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/mm"
			android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"
			android:layout_marginBottom="36dp" app:layout_constraintHorizontal_bias="0.13"/>
	<Button
			android:text="Add card"
			android:onClick="validatecard"
			android:layout_width="370dp"
			android:background="@drawable/bg_aqua"
			android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:id="@+id/button" app:layout_constraintVertical_bias="0.453"
			app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintHorizontal_bias="0.487"/>
	<EditText
			android:layout_width="55dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:hint="CVV"
			android:maxLength="3"
			android:background="@drawable/bg_edittext_focused_1"
			android:ems="10"
			android:id="@+id/cvv" app:layout_constraintStart_toEndOf="@+id/cardno"
			android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="116dp"
			app:layout_constraintHorizontal_bias="0.644"/>
	<com.rengwuxian.materialedittext.MaterialEditText android:layout_width="370dp"
	                                                  android:layout_height="wrap_content"
	                                                  android:id="@+id/maintain_atm"
	                                                  android:hint="ATM_PIN"
	                                                  android:inputType="number"
	                                                  app:met_textColorHint="@color/text"
	                                                  app:met_textColor="@color/text"
	                                                  app:met_iconPadding="1px"
	                                                  app:met_iconRight="@drawable/ic_atm"
...
	                                                  app:layout_constraintHorizontal_bias="0.487"
	                                                  android:layout_marginTop="28dp"
	                                                  app:layout_constraintTop_toBottomOf="@+id/button"/>
	<com.rengwuxian.materialedittext.MaterialEditText android:layout_width="370dp"
	                                                  android:layout_height="wrap_content"

	                                                  android:id="@+id/maintain_mail"
	                                                  android:hint="MAIL_ID"
	                                                  android:inputType="textEmailAddress"
	                                                  app:met_textColorHint="@color/signuptext"
	                                                  app:met_textColor="@color/signuptext"
	                                                  app:met_iconPadding="1px"
	                                                  app:met_iconRight="@drawable/ic_mail"
...
	                                                  app:layout_constraintRight_toRightOf="parent"
	                                                  app:layout_constraintHorizontal_bias="0.491"
	                                                  android:layout_marginTop="12dp"
	                                                  app:layout_constraintTop_toBottomOf="@+id/maintain_atm"/>
	<com.rengwuxian.materialedittext.MaterialEditText android:layout_width="370dp"
	                                                  android:layout_height="wrap_content"
	                                                  android:id="@+id/maintain_phone"
	                                                  android:hint="PHONE_NUMBER"
	                                                  android:inputType="number"
	                                                  app:met_textColorHint="@color/logintext"
	                                                  app:met_textColor="@color/logintext"
	                                                  app:met_iconPadding="1px"
	                                                  app:met_iconRight="@drawable/ic_phone"
...
	                                                  app:layout_constraintLeft_toLeftOf="parent"
	                                                  app:layout_constraintRight_toRightOf="parent"
	                                                  app:layout_constraintHorizontal_bias="0.491"
	                                                  android:layout_marginTop="12dp"
	                                                  app:layout_constraintTop_toBottomOf="@+id/maintain_phone"/>
	<Button
			android:text="Add Details"
			android:onClick="validatedetails"
			android:layout_width="370dp"
			android:background="@drawable/bg_aqua"
			android:layout_height="wrap_content"
			android:id="@+id/button2" android:layout_marginBottom="16dp" app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>

